# ComfyUI-IF_Gemini

./: .gitignore  COMPATIBILITY_NOTICE.md  OPENROUTER_README.md  README.md  __init__.py  api_routes.py  audio_utils.py  dotenv.example  env_utils.py  example.env  gemini_node.py  image_utils.py  old_example.py  pyproject.toml  requirements.txt  response_utils.py  task_prompt_manager.py  test_openrouter.py  utils.py
.github/workflows/: publish-to-registry.yaml
presets/: banana-tasks.json
web/: gemini_extension.js  index.html
web/js/: gemini_node.js  gemini_sequence.js
workflow/: gemini_logo_two_step_process.json
workflow_examples/: IF_Gemini.json  IF_gemini_story.json  gemini_logo_two_step_process.json  gemini_story.json
